# taumax-uci-chess-engine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/board/: mod.rs  position.rs
src/engine/: configuration.rs  horizon.rs  mod.rs  random.rs  seed.rs  selector.rs  session.rs  strategy.rs  trace.rs
src/engine/relative/: freedom.rs  future.rs  gpu_leaf.wgsl  leaf.rs  mobility.rs  mod.rs  profile.rs  selector.rs  terminal.rs
src/search/: control.rs  limits.rs  mod.rs
src/uci/: command.rs  driver.rs  mod.rs  parser.rs  response.rs
tests/: relative_validation.rs  strategy_validation.rs  uci_go.rs  uci_handshake.rs  uci_options.rs  uci_position.rs
