[package]
name        = "taumax-uci-chess-engine"
version     = "1.0.0"
edition     = "2021"
authors     = [ "Rohin Gosling" ]
license     = "MIT"
description = "A Rust UCI chess engine for causal-entropic move-selection experiments."

[lib]
name = "taumax"
path = "src/lib.rs"

[[bin]]
name = "taumax"
path = "src/main.rs"

[dependencies]
cozy-chess = "0.3.4"
rand       = "0.8"
bytemuck   = { version = "1", features = [ "derive" ] }
pollster   = "0.3"
wgpu       = "0.19"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

